references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/AssignmentActionUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:593391889fd285d38c4c738f4faa2cfc3fc0b4d14e4f3eeb20b54f593d030e16
size 1441
